--- a/kisslicer/_supports.ini
+++ b/kisslicer/_supports.ini
@@ -1,7 +1,8 @@
 
-[sample support]
+[KosselMiniEB Support]
 support_sheathe=0
 support_density=0
+solid_interface=0
 support_inflate_mm=0
 support_gap_mm=2
 support_angle_deg=85
@@ -10,3 +11,6 @@ sheathe_z_max_mm=-1
 raft_mode=1
 prime_pillar_mode=0
 raft_inflate_mm=1
+brim_mm=0
+brim_ht_mm=0
+brim_fillet=1
